@startuml FastBite_Dominio_ClassDiagram
' =========================================================
' USERS E PERFIS
' =========================================================

class User {
  +id: uuid
  +name: string
  +email: string
  +password: string
  +created_at: timestamp
  +updated_at: timestamp
}

class Courier {
  +user_id: uuid
  +status: CourierStatus
  +latitude: decimal?
  +longitude: decimal?
  +last_location_update: timestamp?
  +rating_sum: float
  +rating_count: int
  +created_at: timestamp
  +updated_at: timestamp
}

class ChainManager {
  +user_id: uuid
  +chain_id: uuid?
  +created_at: timestamp
  +updated_at: timestamp
}

class LocalManager {
  +user_id: uuid
  +restaurant_id: uuid?
  +created_at: timestamp
  +updated_at: timestamp
}

class UserAddress {
  +id: uuid
  +user_id: uuid
  +street: string
  +city: string
  +postal_code: string
  +country: string
  +latitude: decimal
  +longitude: decimal
  +is_default: boolean
  +label: string?
  +created_at: timestamp
  +updated_at: timestamp
}

class UserPushToken {
  +id: uuid
  +user_id: uuid
  +provider: PushTokenProvider
  +token: string
  +platform: string?
  +is_active: boolean
  +last_used_at: timestamp?
  +created_at: timestamp
  +updated_at: timestamp
}

' =========================================================
' RESTAURANTES E CATALOGO
' =========================================================

class RestaurantChain {
  +id: uuid
  +name: string
  +created_at: timestamp
  +updated_at: timestamp
}

class Restaurant {
  +id: uuid
  +chain_id: uuid
  +name: string
  +opening_hours: string
  +closing_hours: string
  +delivery_radius: float
  +rating_sum: float
  +rating_count: int
  +created_at: timestamp
  +updated_at: timestamp
}

class RestaurantAddress {
  +id: uuid
  +restaurant_id: uuid
  +street: string
  +city: string
  +postal_code: string
  +country: string
  +latitude: decimal
  +longitude: decimal
  +created_at: timestamp
  +updated_at: timestamp
}

class Category {
  +id: uuid
  +chain_id: uuid
  +name: string
  +created_at: timestamp
  +updated_at: timestamp
}

class Product {
  +id: uuid
  +category_id: uuid
  +name: string
  +price: float
  +description: string?
  +created_at: timestamp
  +updated_at: timestamp
}

class RestaurantProduct {
  +id: uuid
  +restaurant_id: uuid
  +product_id: uuid
  +local_price: float?
  +is_available: boolean
  +estimated_preparation_time_min: int?
  +created_at: timestamp
  +updated_at: timestamp
}

class ProductOptionGroup {
  +id: uuid
  +product_id: uuid
  +name: string
  +max_options: int
  +min_options: int
  +created_at: timestamp
  +updated_at: timestamp
}

class ProductOption {
  +id: uuid
  +option_group_id: uuid
  +name: string
  +extra_price: float
  +default_option: boolean
  +created_at: timestamp
  +updated_at: timestamp
}

' =========================================================
' CARRINHO
' =========================================================

class Cart {
  +id: uuid
  +user_id: uuid
  +total: float
  +created_at: timestamp
  +updated_at: timestamp
}

class CartItem {
  +id: uuid
  +cart_id: uuid
  +restaurant_product_id: uuid
  +quantity: int
  +unit_price: float
  +total_price: float
  +created_at: timestamp
  +updated_at: timestamp
}

class CartItemOption {
  +id: uuid
  +cart_item_id: uuid
  +product_option_id: uuid
  +extra_price: float
  +created_at: timestamp
  +updated_at: timestamp
}

' =========================================================
' ENCOMENDAS
' =========================================================

class Order {
  +id: uuid
  +user_id: uuid
  +restaurant_id: uuid
  +status: OrderStatus
  +total: float
  +restaurant_name_snapshot: string
  +created_at: timestamp
  +updated_at: timestamp
}

class OrderItem {
  +id: uuid
  +order_id: uuid
  +restaurant_product_id: uuid
  +status: OrderItemStatus
  +quantity: int
  +unit_price: float
  +product_name_snapshot: string
  +total_price: float
  +created_at: timestamp
  +updated_at: timestamp
}

class OrderItemOption {
  +id: uuid
  +order_item_id: uuid
  +product_option_id: uuid
  +option_name_snapshot: string
  +extra_price: float
  +created_at: timestamp
  +updated_at: timestamp
}

class OrderAddress {
  +id: uuid
  +order_id: uuid
  +street: string
  +city: string
  +postal_code: string
  +country: string
  +latitude: decimal
  +longitude: decimal
  +created_at: timestamp
  +updated_at: timestamp
}

class OrderDiscount {
  +id: uuid
  +order_id: uuid
  +order_item_id: uuid?
  +name_snapshot: string
  +description_snapshot: string?
  +discount_amount: float
  +discount_type: DiscountType
  +discount_target: DiscountTarget
  +origin_type: CampaignMorphType
  +origin_id: uuid
  +created_at: timestamp
  +updated_at: timestamp
}

class OrderEvent {
  +id: uuid
  +order_id: uuid
  +event_type: OrderEventType
  +timestamp: timestamp
  +payload: jsonb?
}

' =========================================================
' PAGAMENTOS E ENTREGAS
' =========================================================

class Payment {
  +id: uuid
  +order_id: uuid
  +method: PaymentMethod
  +status: PaymentStatus
  +transaction_id: string?
  +paid_at: timestamp?
  +expired_at: timestamp?
  +amount: float
  +created_at: timestamp
  +updated_at: timestamp
}

class PaymentEvent {
  +id: uuid
  +payment_id: uuid
  +event_type: PaymentEventType
  +timestamp: timestamp
  +payload: jsonb?
}

class Delivery {
  +id: uuid
  +order_id: uuid
  +courier_id: uuid?
  +status: DeliveryStatus
  +pickup_time: timestamp?
  +delivery_time: timestamp?
  +delivery_fee: float
  +created_at: timestamp
  +updated_at: timestamp
}

class DeliveryOffer {
  +id: uuid
  +delivery_id: uuid
  +courier_id: uuid
  +status: DeliveryOfferStatus
  +expires_at: timestamp
  +accepted_at: timestamp?
  +rejected_at: timestamp?
  +created_at: timestamp
  +updated_at: timestamp
}

class DeliveryEvent {
  +id: uuid
  +delivery_id: uuid
  +event_type: DeliveryEventType
  +payload: jsonb?
  +created_at: timestamp
}

class CourierPositionHistory {
  +id: uuid
  +delivery_id: uuid
  +latitude: decimal
  +longitude: decimal
  +timestamp: timestamp
}

' =========================================================
' CAMPANHAS, REVIEWS, NOTIFICACOES E CHAT
' =========================================================

class Promotion {
  +id: uuid
  +chain_id: uuid
  +name: string
  +description: string?
  +type: DiscountType
  +target: DiscountTarget
  +discount: float
  +start_date: timestamp?
  +end_date: timestamp?
  +created_at: timestamp
  +updated_at: timestamp
}

class Coupon {
  +id: uuid
  +chain_id: uuid
  +code: string
  +description: string?
  +type: DiscountType
  +target: DiscountTarget
  +discount: float
  +expiry_date: timestamp?
  +created_at: timestamp
  +updated_at: timestamp
}

class PromotionItem {
  +id: uuid
  +parent_type: CampaignMorphType
  +parent_id: uuid
  +item_id: uuid
  +created_at: timestamp
  +updated_at: timestamp
}

class Review {
  +id: uuid
  +user_id: uuid
  +rating: int
  +comment: text?
  +target_type: ReviewTargetType
  +target_id: uuid
  +created_at: timestamp
  +updated_at: timestamp
}

class Notification {
  +id: uuid
  +user_id: uuid
  +type: NotificationType
  +title: string
  +message: text
  +sent_at: timestamp
  +read_at: timestamp?
}

class Chat {
  +id: uuid
  +order_id: uuid
  +type: ChatType
  +closed_at: timestamp?
  +created_at: timestamp
  +updated_at: timestamp
}

class ChatParticipant {
  +id: uuid
  +chat_id: uuid
  +user_id: uuid
  +joined_at: timestamp?
  +last_read_at: timestamp?
  +created_at: timestamp
  +updated_at: timestamp
}

class Message {
  +id: uuid
  +chat_id: uuid
  +user_id: uuid
  +content: text
  +timestamp: timestamp
  +read_at: timestamp?
}

class OutboxEvent {
  +id: uuid
  +aggregate_type: OutboxAggregateType
  +aggregate_id: uuid?
  +event_type: OutboxEventType
  +payload: json
  +status: OutboxStatus
  +retry_count: int
  +next_attempt_at: timestamp?
  +published_at: timestamp?
  +last_error: text?
  +created_at: timestamp
  +updated_at: timestamp
}

' enum CourierStatus {
'   AVAILABLE
'   BUSY
'   OFFLINE
' }

' enum OrderStatus {
'   PENDING
'   COURIER_ASSIGNED
'   CONFIRMED
'   PREPARING
'   READY
'   OUT_FOR_DELIVERY
'   DELIVERED
'   CANCELLED
' }

' enum OrderItemStatus {
'   PENDING
'   PREPARING
'   READY
'   CANCELLED
' }

' enum PaymentMethod {
'   CASH
'   CARD
'   MBWAY
'   PAYPAL
' }

' enum PaymentStatus {
'   PENDING
'   COMPLETED
'   FAILED
'   CANCELLED
'   REFUNDED
' }

' enum DeliveryStatus {
'   PENDING
'   PICKED_UP
'   IN_TRANSIT
'   DELIVERED
'   FAILED
' }

' enum DeliveryOfferStatus {
'   PENDING
'   ACCEPTED
'   REJECTED
'   EXPIRED
' }

' enum DiscountType {
'   PERCENTAGE
'   FIXED_AMOUNT
' }

' enum DiscountTarget {
'   ORDER
'   PRODUCT
'   DELIVERY
'   CATEGORY
' }

' enum CampaignMorphType {
'   PROMOTION
'   COUPON
' }

' enum ReviewTargetType {
'   RESTAURANT
'   COURIER
' }

' enum ChatType {
'   CUSTOMER_RESTAURANT
'   CUSTOMER_COURIER
' }

' enum NotificationType {
'   ORDER_UPDATE
'   PROMOTION
'   SYSTEM
' }

' enum PushTokenProvider {
'   expo
' }

' enum OutboxStatus {
'   PENDING
'   PROCESSING
'   PUBLISHED
'   FAILED
' }

' enum OutboxAggregateType {
'   order
'   payment
'   delivery
'   delivery_offer
'   chat
'   notification
'   restaurant
'   user
' }

' enum OutboxEventType {
'   ORDER_CREATED
'   ORDER_PAYMENT_COMPLETED
'   ORDER_CONFIRMED
'   ORDER_REJECTED
'   ORDER_COURIER_ASSIGNED
'   ORDER_PREPARING
'   ORDER_READY
'   ORDER_PICKED_UP
'   ORDER_OUT_FOR_DELIVERY
'   ORDER_DELIVERED
'   ORDER_CANCELLED
'   ORDER_STATUS_UPDATED
'   PAYMENT_CREATED
'   PAYMENT_COMPLETED
'   PAYMENT_FAILED
'   PAYMENT_EXPIRED
'   PAYMENT_CANCELLED
'   PAYMENT_REFUNDED
'   DELIVERY_ACCEPTED
'   DELIVERY_PICKED_UP
'   DELIVERY_IN_TRANSIT
'   DELIVERY_DELIVERED
'   DELIVERY_FAILED
'   JOB_OFFERED
'   JOB_ACCEPTED
'   JOB_REJECTED
'   JOB_EXPIRED
'   COURIER_POSITION_UPDATED
'   CHAT_MESSAGE_SENT
'   USER_NOTIFICATION_CREATED
'   RESTAURANT_RATING_THRESHOLD_REACHED
'   USER_ORDER_MILESTONE_REACHED
' }

' enum OrderEventType {
'   ORDER_CREATED
'   ORDER_PAYMENT_COMPLETED
'   ORDER_CONFIRMED
'   ORDER_REJECTED
'   ORDER_COURIER_ASSIGNED
'   ORDER_PREPARING
'   ORDER_READY
'   ORDER_PICKED_UP
'   ORDER_OUT_FOR_DELIVERY
'   ORDER_DELIVERED
'   ORDER_CANCELLED
' }

' enum PaymentEventType {
'   PAYMENT_CREATED
'   PAYMENT_COMPLETED
'   PAYMENT_FAILED
'   PAYMENT_EXPIRED
'   PAYMENT_CANCELLED
'   PAYMENT_REFUNDED
' }

' enum DeliveryEventType {
'   DELIVERY_ACCEPTED
'   DELIVERY_PICKED_UP
'   DELIVERY_IN_TRANSIT
'   DELIVERY_DELIVERED
'   DELIVERY_FAILED
' }

' enum DeliveryOfferEventType {
'   JOB_OFFERED
'   JOB_ACCEPTED
'   JOB_REJECTED
'   JOB_EXPIRED
' }

' =========================================================
' RELACOES
' =========================================================

User "1" -- "0..1" Courier
User "1" -- "0..1" ChainManager
User "1" -- "0..1" LocalManager
User "1" -- "0..*" UserAddress
User "1" -- "0..*" UserPushToken
User "1" -- "0..*" Cart
User "1" -- "0..*" Order
User "1" -- "0..*" Review
User "1" -- "0..*" Notification
User "1" -- "0..*" ChatParticipant

RestaurantChain "1" -- "0..*" Restaurant
RestaurantChain "1" -- "0..*" Category
RestaurantChain "1" -- "0..*" ChainManager
RestaurantChain "1" -- "0..*" Promotion
RestaurantChain "1" -- "0..*" Coupon

Restaurant "1" -- "0..*" LocalManager
Restaurant "1" -- "1" RestaurantAddress
Restaurant "1" -- "0..*" RestaurantProduct
Restaurant "1" -- "0..*" Order

Category "1" -- "0..*" Product
Product "1" -- "0..*" RestaurantProduct
Product "1" -- "0..*" ProductOptionGroup
ProductOptionGroup "1" -- "0..*" ProductOption

Cart "1" -- "0..*" CartItem
CartItem "1" -- "0..*" CartItemOption
RestaurantProduct "1" -- "0..*" CartItem
ProductOption "1" -- "0..*" CartItemOption

Order "1" -- "1..*" OrderItem
Order "1" -- "1" OrderAddress
Order "1" -- "0..*" OrderDiscount
Order "1" -- "0..*" OrderEvent
Order "1" -- "1" Payment
Order "1" -- "0..1" Delivery
Order "1" -- "0..*" Chat

RestaurantProduct "1" -- "0..*" OrderItem
OrderItem "1" -- "0..*" OrderItemOption
ProductOption "1" -- "0..*" OrderItemOption
OrderItem "1" -- "0..*" OrderDiscount

Payment "1" -- "0..*" PaymentEvent

Delivery "1" -- "0..*" DeliveryOffer
Delivery "1" -- "0..*" DeliveryEvent
Delivery "1" -- "0..*" CourierPositionHistory
Courier "1" -- "0..*" Delivery
Courier "1" -- "0..*" DeliveryOffer

Promotion "1" -- "0..*" PromotionItem
Coupon "1" -- "0..*" PromotionItem

Chat "1" -- "2..*" ChatParticipant
Chat "1" -- "0..*" Message
ChatParticipant "1" -- "0..*" Message

' Relacoes polimorficas / por tipo
' Review ..> Restaurant : target_type=RESTAURANT
' Review ..> Courier : target_type=COURIER
' PromotionItem ..> Product : item_id quando target=PRODUCT
' PromotionItem ..> Category : item_id quando target=CATEGORY
' OrderDiscount ..> Promotion : origin_type=PROMOTION
' OrderDiscount ..> Coupon : origin_type=COUPON
' OutboxEvent ..> Order : aggregate_type=order
' OutboxEvent ..> Payment : aggregate_type=payment
' OutboxEvent ..> Delivery : aggregate_type=delivery
' OutboxEvent ..> DeliveryOffer : aggregate_type=delivery_offer
' OutboxEvent ..> Notification : aggregate_type=notification
' OutboxEvent ..> Chat : aggregate_type=chat

' Ajuda de layout invisivel: organiza em faixas horizontais sem criar grupos visuais.
' User -[hidden]down- RestaurantChain
' RestaurantChain -[hidden]down- Cart
' Cart -[hidden]down- Order
' Order -[hidden]down- Payment
' Payment -[hidden]down- Promotion

' Courier -[hidden]right- UserAddress
' UserAddress -[hidden]right- UserPushToken

' Restaurant -[hidden]right- Category
' Category -[hidden]right- Product
' Product -[hidden]right- RestaurantProduct
' RestaurantProduct -[hidden]right- ProductOptionGroup
' ProductOptionGroup -[hidden]right- ProductOption

' Cart -[hidden]right- CartItem
' CartItem -[hidden]right- CartItemOption

' Order -[hidden]right- OrderItem
' OrderItem -[hidden]right- OrderItemOption
' OrderItemOption -[hidden]right- OrderDiscount
' OrderDiscount -[hidden]right- OrderEvent

' Payment -[hidden]right- PaymentEvent
' PaymentEvent -[hidden]right- Delivery
' Delivery -[hidden]right- DeliveryOffer
' DeliveryOffer -[hidden]right- DeliveryEvent
' DeliveryEvent -[hidden]right- CourierPositionHistory

' Promotion -[hidden]right- Coupon
' Coupon -[hidden]right- PromotionItem
' PromotionItem -[hidden]right- Review
' Review -[hidden]right- Notification
' Notification -[hidden]right- Chat
' Chat -[hidden]right- ChatParticipant
' ChatParticipant -[hidden]right- Message
' Message -[hidden]right- OutboxEvent

@enduml
